# fst-lookup

./: .clang-format  .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.md  build.py  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: python-format.yml  python-package.yml  python-publish.yml  pythonpackage.yml
fst_lookup/: __init__.py  __version__.py  _fst_lookup.c  _fst_lookup.pyi  _parse.c  _parse_foma_state.c  _parse_foma_state.pyi  data.py  fallback_data.py  fastfomamodule.c  flags.py  fst.py  parse.py  symbol.py  typedefs.py
libexec/: generate-setup-py  print-version.py  update-version.py
tests/: conftest.py  test_apply.py  test_arc.py  test_flag.py  test_parse.py  test_performance.py  test_str.py  test_usage.py
tests/data/: .gitignore  Makefile  crk-descriptive-analyzer.fomabin  crk-normative-generator.fomabin  eat.lexc  english-flags.lexc  english-ipa.fomabin  english-ipa.lexc  flag-test.fomabin  flag-test.fomatxt  tae.fomabin
tests/regressions/: test_at_symbol.py  test_gh004_concatenate_lemma.py  test_gh021_mismatched_flag.py
tests/regressions/data/: .gitignore  Makefile  README.md
