[tool.poetry]
name = "fst-lookup"
version = "2021.4.16"
description = "Lookup Foma FSTs"
authors = ["Eddie Antonio Santos <easantos@ualberta.ca>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eddieantonio/fst-lookup"
keywords = ["fst", "lookup", "transducer", "morphology", "foma"]
classifiers = [
    "Development Status :: 5 - Production/Stable"
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pytest = "^5.3.5"
pytest-datadir = "^1.3.1"
black = "^19.10b0"
isort = "^4.3.21"
pytest-cov = "^2.8.1"
codecov = "^2.0.15"
hypothesis = "^5.14.0"
python-dotenv = "^0.13.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/eddieantonio/fst-lookup/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
