[tool.poetry]
name = "fst-lookup"
version = "2021.4.16"
description = "Lookup Foma FSTs"
authors = ["Eddie Antonio Santos <Eddie.Santos@nrc-cnrc.gc.ca>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eddieantonio/fst-lookup"
keywords = ["fst", "lookup", "transducer", "morphology", "foma"]
classifiers = [
    "Development Status :: 5 - Production/Stable"
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-datadir = "^1.3.1"
isort = "^4.3.21"
pytest-cov = "^2.8.1"
hypothesis = "^5.14.0"
python-dotenv = "^0.13.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/eddieantonio/fst-lookup/issues"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
