[tool.poetry]
name = "fst-lookup"
version = "2024.7.3"
description = "Lookup Foma FSTs"
authors = ["Eddie Antonio Santos <Eddie.Santos@nrc-cnrc.gc.ca>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eddieantonio/fst-lookup"
keywords = ["fst", "lookup", "transducer", "morphology", "foma"]
classifiers = [
    "Development Status :: 5 - Production/Stable"
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
python-dotenv = "^0.13.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/eddieantonio/fst-lookup/issues"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
hypothesis = "^6.104.2"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-datadir = "^1.5.0"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
